Fixed fonts, block style, atomic unit error, contrasts and new block animation

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ body {
   background-color:#1E1D1F;
   padding-top: 4rem;
   padding-bottom: 4rem;
+  color: rgba(255,255,255,0.9);
 }
 
 .bg-dark {
@@ -199,7 +200,7 @@ body {
 }
 
 .container {
-  color:#ffffff;
+  color:#f1f2f3;
   top:30px;
 }
 
@@ -212,16 +213,25 @@ body {
   background-color:#222123;
 }
 
+.card-header {
+  font-family: 'Montserrat';
+}
+
 .card-chart {
   padding:0px;
 }
 
 .table-responsive, .table {
-  color:#ffffff;
+  color:rgba(255,255,255,0.9);
+}
+
+.table > thead {
+
+  font-family: "Montserrat";
 }
 
 .link-white {
-  color:#ffffff;
+  color:rgba(255,255,255,0.9);
   text-decoration:none;
 }
 
@@ -313,6 +323,7 @@ body > main > div.row > center > div > div:nth-child(6) {}
 	height:100%;
 	background-color:#1E1D1F;
 	position: relative;
+  font-size: 11px;
 }
 
 .block-click:hover {
@@ -393,12 +404,12 @@ tr {
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 .apexcharts-legend-text {
-	color:#ffffff!important;
+
 }
 
 .apexcharts-tooltip {
 	line-height: 1;
-	color: #fff;
+	color: #f1f2f3;
 	background: #2c2c2c!important;
 	border: 0!important;
 	border-radius: 3px!important;
@@ -430,7 +441,7 @@ tr {
 
 .navbar-brand {
   font-family: "Montserrat";
-  color: white;
+  color: #f1f2f3;
   font-weight: 700;
 }
 
@@ -444,7 +455,7 @@ tr {
   color: rgba(0, 0, 0, 0.7);
   text-align: center;
   width: 100%;
-  color: white;
+  color: #f1f2f3;
   line-height: 29px;
   vertical-align: middle;
   margin-left: 10px;
@@ -495,7 +506,8 @@ tr {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-} 
+  font-weight: bolder;
+}
 
 .form-control {
 	background-color:#2f2e30;
@@ -511,7 +523,7 @@ tr {
   }
 
   .btn-check:focus+.btn-primary, .btn-primary:focus {
-    color: #fff;
+
     background-color: #0b5ed7;
     border-color: #0a58ca;
     box-shadow: 0 0 0 0.25rem rgb(49 132 253 / 0%)!important;
@@ -526,4 +538,79 @@ tr {
 	background-color: #2f2e30;
 	display: flex;
 	justify-content: center;
+}
+
+.block span:first-of-type {
+
+  font-family: 'Montserrat';
+}
+
+.lds-grid {
+  display: inline-block;
+  position: relative;
+  transform: scale(0.44);
+  width: 100%;
+  margin-left: 5%;
+  top: -10%;
+}
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
 }
